update tex - first final version

--- a/tex/References.bib
+++ b/tex/References.bib
@@ -484,7 +484,7 @@
     pages={51--89}
 }
 
-% @article{bholat2015text,
+@article{bholat2015text,
   title={Text mining for central banks},
   author={Bholat, David and Hansen, Stephen and Santos, Pedro and Schonhardt-Bailey, Cheryl},
   journal={Available at SSRN 2624811},
@@ -763,4 +763,102 @@
   pages={1093--1113},
   year={2014},
   publisher={Elsevier}
+}
+
+% Recognizing Contextual Polarity in Phrase-Level Sentiment Analysis
+@inproceedings{wilson2005,
+    title = "Recognizing Contextual Polarity in Phrase-Level Sentiment Analysis",
+    author = "Wilson, Theresa  and
+      Wiebe, Janyce  and
+      Hoffmann, Paul",
+    booktitle = "Proceedings of Human Language Technology Conference and Conference on Empirical Methods in Natural Language Processing",
+    month = oct,
+    year = "2005",
+    address = "Vancouver, British Columbia, Canada",
+    publisher = "Association for Computational Linguistics",
+    url = "https://aclanthology.org/H05-1044",
+    pages = "347--354",
+}
+
+% News and narratives in financial systems: Exploiting big data for systemic risk assessment
+@article{NYMAN2021104119,
+title = {News and narratives in financial systems: Exploiting big data for systemic risk assessment},
+journal = {Journal of Economic Dynamics and Control},
+volume = {127},
+pages = {104119},
+year = {2021},
+issn = {0165-1889},
+doi = {https://doi.org/10.1016/j.jedc.2021.104119},
+url = {https://www.sciencedirect.com/science/article/pii/S0165188921000543},
+author = {Rickard Nyman and Sujit Kapadia and David Tuckett}
+}
+
+% Animal spirits: How human psychology drives the economy, and why it matters for global capitalism
+@book{akerlof2010animal,
+  title={Animal spirits: How human psychology drives the economy, and why it matters for global capitalism},
+  author={Akerlof, George A and Shiller, Robert J},
+  year={2010},
+  publisher={Princeton university press}
+}
+
+% A crisis of beliefs
+@incollection{gennaioli2018crisis,
+  title={A crisis of beliefs},
+  author={Gennaioli, Nicola and Shleifer, Andrei},
+  booktitle={A Crisis of Beliefs},
+  year={2018},
+  publisher={Princeton University Press}
+}
+
+% Central banks in parliaments: A text analysis of the parliamentary hearings of the bank of england, the european central bank and the federal reserve
+@article{fraccaroli2020central,
+  title={Central banks in parliaments: A text analysis of the parliamentary hearings of the bank of england, the european central bank and the federal reserve},
+  author={Fraccaroli, Nicol{\`o} and Giovannini, Alessandro},
+  year={2020},
+  publisher={ECB Working Paper}
+}
+
+% {KNIME}: The {K}onstanz {I}nformation {M}iner
+@inproceedings{BCDG07, 
+  author = {Michael R. Berthold and Nicolas Cebron and Fabian Dill and Thomas R. Gabriel and Tobias K\"{o}tter and Thorsten Meinl and Peter Ohl and Christoph Sieb and Kilian Thiel and Bernd Wiswedel},
+  title = {{KNIME}: The {K}onstanz {I}nformation {M}iner},
+  booktitle = {Studies in Classification, Data Analysis, and Knowledge Organization (GfKL 2007)},
+  publisher = {Springer},
+  ISBN = {978-3-540-78239-1},
+  ISSN = {1431-8814},
+  year = {2007}
+}
+
+% Polarity lexicon building: to what extent is the manual effort worth?
+@inproceedings{san2016polarity,
+  title={Polarity lexicon building: to what extent is the manual effort worth?},
+  author={San Vicente, Inaki and Saralegi, Xabier},
+  booktitle={Proceedings of the Tenth International Conference on Language Resources and Evaluation (LREC'16)},
+  pages={938--942},
+  year={2016}
+}
+
+% The general inquirer: A computer approach to content analysis.
+@article{stone1966general,
+  title={The general inquirer: A computer approach to content analysis.},
+  author={Stone, Philip J and Dunphy, Dexter C and Smith, Marshall S},
+  year={1966},
+  publisher={MIT press}
+}
+
+% Senticnet 2: A semantic and affective resource for opinion mining and sentiment analysis
+@inproceedings{cambria2012senticnet,
+  title={Senticnet 2: A semantic and affective resource for opinion mining and sentiment analysis},
+  author={Cambria, Erik and Havasi, Catherine and Hussain, Amir},
+  booktitle={Twenty-Fifth international FLAIRS conference},
+  year={2012}
+}
+
+% SenticNet 6: Ensemble application of symbolic and subsymbolic AI for sentiment analysis
+@inproceedings{cambria2020senticnet,
+  title={SenticNet 6: Ensemble application of symbolic and subsymbolic AI for sentiment analysis},
+  author={Cambria, Erik and Li, Yang and Xing, Frank Z and Poria, Soujanya and Kwok, Kenneth},
+  booktitle={Proceedings of the 29th ACM international conference on information \& knowledge management},
+  pages={105--114},
+  year={2020}
 }
