--- a/tex/Text/4.Introduction.tex
+++ b/tex/Text/4.Introduction.tex
@@ -1,21 +1,24 @@
 \chapter{\textbf{Introduction}}  \label{introduction}
 \pagenumbering{arabic}
 
-Economics decisions, in particular monetary policies, are based in resolutions provided by central banks. However, these resolutions are not always clear, especially for layman. Central banks minutes contain, for instance, much more information than it seems, particularly if a set of texts are considered for a conjunctural or structural analysis.\\
+Economic decisions, in particular monetary policies, are based on resolutions provided by central banks. These remedies, however, are not always obvious, especially for lay people. For example, central bank minutes often include much more information than appears at first glance, especially when a group of texts is taken into account for a conjunctive or structural analysis. Understanding a collection of texts can occasionally be very difficult for a human being; depending on the purpose of understanding, the analysis can involve thousands or even millions of pages. However, thanks to developments in computing, questions like these are increasingly likely to be resolved. For a better understanding and knowledge of what a text, or a series of texts (corpus), actually says or expresses, techniques and tools like Natural Language Processing (NLP) and text mining are being heavily used.\\
 
-On occasion, the comprehension of a set of texts could be complex enough for a human to perform: the analysis may be referring to thousands or even millions of pages, depending on the purpose of the understanding. Nevertheless, problems like these are increasingly likely to be resolved due to advances in computational fields. Technics and tools such as Natural Language Processing (NLP) and text mining are being strongly used for a better comprehension and understanding of what a text, or a set of text (corpus), actually means or expresses.\\
+It is already possible to discover trends in search engines such as Google and Yahoo using text analysis to anticipate macroeconomic indicators or even increase the understanding of consumer behavior. In recent study, \cite{bholat2015text} considers that, although the advances made in the field of computing are significant, the applicability of text mining in the economy is still not used as it could be. In the same study, the authors present cases of applicability of text mining in the economic field, with examples in the job market or even explaining how Natural Language Processing techniques can be applied to economics.\\
 
-Nowadays it is possible to recognize patterns on search pages as Google and Yahoo utilising text analysis in order to predict macroeconomics variables or even increase understanding of consumer behaviour. In recent research, Bholat, Hansen, Santos, \& Schonhardt-Bailey (2015) consider that even though the advances that have taken place in the field of computing are significant, the applicability of text mining in economics is still not used the way it could be.\\
+An alternative approach of application still in the field of Natural Language Processing is the sentiment analysis. Basically, it is “the task of identifying positive and negative opinions, emotions, and evaluations” \cite[]{wilson2005}. Sentiment analysis allows extracting information that normally a human being would not be able to, due to the amount of text, or even the difficulty of recognizing unstructured patterns. Through sentiment lexicons, it is possible to classify whether a text, phrase or words has a positive, neutral or negative expression (polarity-based lexicon) -- or even assign scores to a text, phrase or word (valence-based lexicon). When working with a set of economic texts, it is possible, then, to assign scores so that feelings can be monitored in a temporal way.\\	
 
-An alternative approach of application still in the field of NLP is the sentiment analysis. Basically, it is “the task of identifying positive and negative opinions, emotions, and evaluations” (Wilson, Wiebe, \& Hoffmann, 2005, p.1). Sentiment analysis allows to extract information that usually a human being could not do, due to the amount of text, or even the difficulty to recognizing unstructured patterns.\\	
+Another article written by \cite{NYMAN2021104119} considered the possibility of a sentiment index, based on social media and networks, for a measure of excitement or anxiety about the financial and economic situation. The index proposes to act as a proxy for market sentiment: bullish or bearish. The ratio of the index would then be compared against historical events and other financial indicators \cite[]{NYMAN2021104119}. The idea of sentiment indices does not come from \cite{NYMAN2021104119} -- authors have already presented the possibility of modeling the economy by including non-observable variables that can represent economic sentiment. Even though in studies such as \cite{barsky2012information, angeletos2013sentiments, akerlof2010animal, gennaioli2018crisis, bholat2015text} the idea of economic sentiments has already been presented; Previous studies \cite{shapiro2020measuring, shapiro2021taking} presented the idea of an index of sentiments coming from Natural Language Processing techniques, where the index presents a boost to economic activity.\\
 
-Another paper written by Nyman, Kapadia, \& Tuckett (2021) considered the possibility of a sentiment index, based in social media, for measure of excitement or anxiety about the financial conjunctural situation. The index would work as a proxy for the market sentiment: bullish or bearish. The ratio of the index would be, then, compared with historical events and others financial indicators (Nyman et al. 2021).\\
+Gradually, Natural Language Processing techniques and tools have been increasingly used with implementations in the economic field. It is not difficult to find correlations between macroeconomic variables and sentiment analyzes extracted from the media, economic newspapers or magazines \cite[]{ostapenko2020macroeconomic, NYMAN2021104119} or even from speeches or parliamentary hearings of central banks \cite[]{fraccaroli2020central, shapiro2020measuring, shapiro2021taking}.\\
 
-Gradually, technics and tools such as sentiment analysis and text mining has been used with implementations in the economic field. It is not hard to find correlations between macroeconomic variables and sentiment analysis extracted from media (Ostapenko, 2020) or even parliament hearings from central banks (Fraccaroli \& Giovannini, 2020).\\
+The examination and investigation of how textual patterns supplied by the European Central Bank can point to and connect with conjunctural and structural moments of the economy is the major goal of this work. From the speeches of the European Central Bank, an index of economic sentiment was elaborated that can reflect what the economic scenario goes through -- that is, the reflection of the economy from the point of view of the economic speeches of the European Central Bank. The use of Natural Language Processing techniques in the economics field can be very advanced and useful for a better understanding of what central banks are actually indicating (through textual documents), and not just reduce the central bank's indication based on its own resolutions. Language Processing techniques are being used more and more to capture patterns that are practically imperceptible to the human eye.\\
 
-This work has as its main objective the analysis and investigation of how textual patterns provided by the ECB can indicate and correlate with conjunctural and structural moments in the economy (especially in macroeconomics). From structured data taken from press conferences of the European central bank and monetary policy resolutions, understand how “words” and “expressions” can indicate a period of recession, or even verify the credibility of the central bank from its “expressions”. NLP techniques have been increasingly used in order to capture patterns practically imperceptible to the human eye, the use of this technique in the economic field could be of great advancement and usefulness for a better understanding of what central banks are really indicating (through textual documents), and not only reduce the indication of the central bank based on its own resolutions.\\
+The greatest relevance and contribution of this work is the use of the speeches of the European Central Bank as an indicator of economic sentiments. From this point, it will be possible to compare the results obtained with previous correlated works in the literature so that an “asymptotic” relationship is expected in terms of results -- in terms of counter intuition, the objective of this work is to corroborate the indicated literature.\\
 
-The greatest relevance and contribution of this work is the use of ECB press conferences as an indicator of sentiments - not as done before, where the main references came from monetary policy reports or speeches. Starting from this point, it will be possible to compare the results obtained with previous works so that an “asymptotic” relationship in terms of results is expected.\\
+The chapter \ref{chapter:lit} presents the bibliographic review of this work and exposes the main works used as a reference for this bibliography. The chapter exposes the point of view of \cite{shapiro2020measuring, shapiro2021taking} articles that made use of Natural Language Processing and Sentiment Analysis techniques. Also, other articles \cite{barsky2012information, angeletos2013sentiments} are exposed that work with the \textit{concept} of feelings in an economic scenario, even when considering a general equilibrium scenario.\\
 
-This final report is fundamentally divided according to the division of the final dissertation, with the exception of the parts referring to the final results and conclusion. Section 2 addresses the literature review, fundamentally alluding to text mining, sentiment analysis, and econometric applications; section 3 deals with the methodology used in the work, reviewing concepts of more computational approaches such as web scraping and NLP techniques; section 4 focuses on the division of the work plan as well as a provisional index of the dissertation; section 5 presents the textual references of this work.
+The \ref{cap:methodology} chapter presents the review and introduction of the reference methodology, related to the Natural Language Processing parts and lexicons. Two fundamental lexicons are exposed and used in this work -- VADER \cite[]{hutto2014vader} and LM-SA-2020 \cite[]{lmdata}, the first lexicon being a valence-based lexicon and the second a polarity- based lexicon, economically grounded. Still, concepts of Natural Language Processing and Sentiment Analysis are defined.\\
 
+The \ref{cap:results} chapter presents the result of the present work. This chapter addresses the case study carried out. Using the speeches of the European Central Bank as a basis, two studies are carried out: in the first, models of selection of variables are estimated to infer whether indices of economic sentiments based on NLP would be statistically significant for the estimation of economic variables; and in the second study we estimate the responses of the impulse response functions given a shock in sentiment indexes using an Autoregressive Vector -- this would make it possible to understand how the estimated economic variables would behave when a ``variation'' of sentiments occurs in the economic scenario.\\
+
+The work ends with the fifth chapter, highlighting the final considerations of the dissertation and the conclusions regarding what was done.
