--- a/tex/main.tex
+++ b/tex/main.tex
@@ -35,6 +35,7 @@ BoldItalicFont=GARA.ttf,
 \usepackage{longtable}
 
 \usepackage{graphicx}
+\usepackage{amssymb}
 
 
 
@@ -73,7 +74,7 @@ BoldItalicFont=GARA.ttf,
 
 \usepackage{indentfirst}
 
-\title{Clustering three-way data structures: \protect \linebreak a time series approach}
+\title{European Central Bank Speeches: A Case Study}
 \author{Gustavo de Oliveira Vital}
 \date{\today}
 
@@ -89,9 +90,9 @@ BoldItalicFont=GARA.ttf,
 
 \newpage
 
-\input{Text/0.Author.tex}
+%\input{Text/0.Author.tex}
 %\addcontentsline{toc}{section}{Biographical note}
-\setcounter{page}{2}
+%\setcounter{page}{2}
 
 \newpage
 %\input{Text/1.Acknowledgement.tex}
@@ -103,7 +104,7 @@ BoldItalicFont=GARA.ttf,
 \newpage
 \input{Text/2.Abstract.tex}
 \addcontentsline{toc}{section}{Abstract}
-\setcounter{page}{4}
+\setcounter{page}{1}
 
 
 \newpage
@@ -138,6 +139,7 @@ BoldItalicFont=GARA.ttf,
 \input{Text/6.Conclusion.tex}
 
 \newpage
+\addcontentsline{toc}{chapter}{References}
 \bibliographystyle{apacite}
 \bibliography{References.bib}
 
